newclay/test/Compiler/Propagation/Fail/ContinueOutsideLoop/main.clay

define main;
overload main() {
    continue;
}
